force-app/main/default/objects/Account/fields/Accumulated_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Interest__c</fullName>
    <formula>Principal__c * EXP(Interest_Rate__c * (YEAR(TODAY()) - VALUE(YearStarted)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>