force-app/main/default/objects/Account/fields/Chiffre_d_affaire__c.field-meta.xml
<CustomField>
    <fullName>Chiffre_d_affaire__c</fullName>
    <label>Chiffre d affaire</label>
    <precision>18</precision>
    <scale>0</scale>
      <type>Currency</type>
</CustomField>