force-app/main/default/objects/Account/fields/Future_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Date__c</fullName>
    <formula>CASE(
  WEEKDAY(TODAY()),
  3, TODAY() + 2 + 3,
  4, TODAY() + 2 + 3,
  5, TODAY() + 2 + 3,
  6, TODAY() + 1 + 3,
  TODAY() + 3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Date</label>
    <type>Date</type>
</CustomField>