force-app/main/default/objects/Account/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>true</active>
    <description>A contact with a MailingPostalCode that has an account and does not match the associated Account ShippingPostalCode should return with a validation error and not be saved</description>
    <errorConditionFormula>AND( 
NOT( ISNULL( Id ) ), 
$Organization.PostalCode &lt;&gt; ShippingPostalCode 
)</errorConditionFormula>
    <errorMessage>Contact records with no associated parent account can be added with any MailingPostalCode value</errorMessage>
</ValidationRule>